--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ html {
 td {
   width: 20px;
   height: 20px;
-  border: 1px solid #000;
+  border: 1px solid #ddd;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
