--- a/style.css
+++ b/style.css
@@ -99,6 +99,23 @@ td {
 }
 
 
+#reload-game {
+    border: 3px solid #000;
+    font-family: 'Passion One', cursive;
+    font-size: 20px;
+    text-transform: uppercase;
+    color: #000;
+    background: transparent;
+    
+    display: block;
+    margin-top: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+
 #test {
     font-family: 'Roboto Slab', serif;
     font-size: 40px;
